[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/art/backgrounds/cutscene/droor closed.png" type="Texture" id=1]
[ext_resource path="res://scripts/IntroCutscene.gd" type="Script" id=2]
[ext_resource path="res://assets/font/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/LabelWithSound.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/art/backgrounds/cutscene/droor opened.png" type="Texture" id=5]
[ext_resource path="res://assets/sound/sfx/poke.wav" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "1"
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("MonologueLabels/DinnerLastNight:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 1.8, 2.3, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.15, 0.15, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TutorialLabels/OpenDroor:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "2"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("MonologueLabels/WhereToothbrush:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.3, 1.7, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.2, 0.2, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TutorialLabels/Continue:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5, 6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "3"
length = 2.8
tracks/0/type = "value"
tracks/0/path = NodePath("MonologueLabels/BrushTeeth:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 2.5, 2.8, 3.8, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.85, 0.85, 1.0, 1.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TutorialLabels/Continue:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.8, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "4"
length = 5.5
tracks/0/type = "value"
tracks/0/path = NodePath("MonologueLabels/Grandma:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 5.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.05, 0.05, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TutorialLabels/Start:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 5.5, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="IntroCutscene" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
centered = false

[node name="MonologueLabels" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DinnerLastNight" parent="MonologueLabels" instance=ExtResource( 4 )]
anchor_bottom = 0.35
margin_left = 8.0
margin_top = 52.0
margin_right = 210.0
margin_bottom = 52.0
text = "Ugh, that dinner last night was awful."
percent_visible = 0.0

[node name="WhereToothbrush" parent="MonologueLabels" instance=ExtResource( 4 )]
anchor_bottom = 0.35
margin_left = 8.0
margin_top = 52.0
margin_right = 210.0
margin_bottom = 52.0
text = "Crap. Where's my toothbrush!"
percent_visible = 0.0

[node name="BrushTeeth" parent="MonologueLabels" instance=ExtResource( 4 )]
anchor_bottom = 0.35
margin_left = 8.0
margin_top = 52.0
margin_right = 210.0
margin_bottom = 52.0
text = "I really have to brush my teeth.. Ahhh!"
percent_visible = 0.0

[node name="Grandma" parent="MonologueLabels" instance=ExtResource( 4 )]
anchor_bottom = 0.35
margin_left = 8.0
margin_top = 52.0
margin_right = 210.0
margin_bottom = 52.0
text = "... I think I'll have to brush my teeth the way my grandma did back in the 50s..."
autowrap = true
percent_visible = 0.0

[node name="TutorialLabels" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenDroor" type="Label" parent="TutorialLabels"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.35
anchor_bottom = 0.35
margin_left = 8.0
margin_top = 146.0
margin_right = 115.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 3 )
text = "Click to open droor."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Label" parent="TutorialLabels"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.35
anchor_bottom = 0.35
margin_left = 8.0
margin_top = 146.0
margin_right = 115.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 3 )
text = "Click to continue."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Label" parent="TutorialLabels"]
modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.35
anchor_bottom = 0.35
margin_left = 8.0
margin_top = 146.0
margin_right = 115.0
margin_bottom = 160.0
custom_fonts/font = ExtResource( 3 )
text = "Click to start."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/1 = SubResource( 2 )
anims/2 = SubResource( 3 )
anims/3 = SubResource( 4 )
anims/4 = SubResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="SFX" type="Node" parent="."]

[node name="DroorOpen" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource( 6 )
pitch_scale = 0.5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
